# main/model/projectRequest.go
@@ -8,6 +8,8 @@ type ProjectRequest struct {
 	Description string                  `json:"description"`
 	Note        string                  `json:"note"`
 	URLProject  string                  `json:"url_project"`
+	URLVideo    string                  `json:"url_video"`
+	OrderNumber int32                   `json:"order_number"`
 	Categories  []string                `json:"categories"`
 	Tags        []string                `json:"tags"`
 	Images      []*multipart.FileHeader `json:"images"`
