# main/model/projectResponse.go
@@ -7,6 +7,8 @@ type ProjectResponse struct {
 	Description string   `json:"description"`
 	Note        string   `json:"note"`
 	URLProject  string   `json:"url_project"`
+	URLVideo    string   `json:"url_video"`
+	OrderNumber int32    `json:"order_number"`
 	Categories  []string `json:"categories"`
 	Tags        []string `json:"tags"`
 	Images      []string `json:"images"`
